bug 7604: Added cluster property "security.xml.dsig.permittedDigestAlgorithms" that can be used to change the whitelist of digest algorithms that will be permitted by all XML digital signature verifications (and, currently, signatures) that use the WssProcessorAlgorithmFactory.   Currently this affects the Non-SOAP Verify XML assertion, the WSS processor, and verification of SAML assertion embedded signatures.
Also, verification of Gateway license XML signatures has been changed to refuse licenses signed using MD5 (as we have never issued any licenses signed using MD5).

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25042 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1056,6 +1056,12 @@ timestampExpiresPastGrace.default = 60000
 timestampExpiresPastGrace.systemProperty = ${propertyPrefix}.policy.assertion.xmlsec.ServerRequestWssTimestamp.expiresPastGrace
 timestampExpiresPastGrace.clusterProperty = security.wss.timestamp.expiresPastGrace
 
+security.xml.dsig.permittedDigestAlgorithms.description = List of message digest algorithm names that will be respected when verifying XML digital signatures.  DigestMethod and SignatureMethod references that require algorithms not on this list will not be respected.  (Comma delimited; default="MD5,SHA,SHA-1,SHA-256,SHA-384,SHA-512")
+security.xml.dsig.permittedDigestAlgorithms.default = MD5,SHA,SHA-1,SHA-256,SHA-384,SHA-512
+security.xml.dsig.permittedDigestAlgorithms.clusterProperty = security.xml.dsig.permittedDigestAlgorithms
+security.xml.dsig.permittedDigestAlgorithms.systemProperty = com.l7tech.security.xml.dsig.permittedDigestAlgorithms
+security.xml.dsig.permittedDigestAlgorithms.setSystemProperty = true
+
 esmNotificationEnabled.description = Enable ESM subscription notifications (true/false)
 esmNotificationEnabled.default = true
 esmNotificationEnabled.clusterProperty = esm.notification.enabled
