Modules can now declare if they produce a build/ folder, so that it gets excluded in .iml files.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25052 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -449,6 +449,7 @@
                 <propertyref name="module.compile.excludes"/>
                 <propertyref name="module.sign"/>
                 <propertyref name="module.pack200"/>
+                <propertyref name="module.build.output"/>
                 <propertyref name="src.root"/>
                 <propertyref prefix="build.version"/>
                 <propertyref prefix="build.em.version"/>
