--- a/modules/gateway/patchverifier/build.xml
+++ b/modules/gateway/patchverifier/build.xml
@@ -4,7 +4,8 @@
     <property name="module.package.jar.required" value="true"/>
     <property name="module.jar.index" value="true"/>
     <property name="module.obfuscate.disabled" value="true"/>
-    
+    <property name="module.build.output" value="true"/>
+
     <import file="../../../etc/build/build-common.xml"/>
 
     <!-- Custom packaging step to include an artifact into this module -->
