--- a/modules/gateway/processcontroller/build.xml
+++ b/modules/gateway/processcontroller/build.xml
@@ -1,6 +1,7 @@
 <project name="layer7-gateway-processcontroller" default="compile">
     <property name="module.main" value="com.l7tech.server.processcontroller.ProcessControllerDaemon"/>
     <property name="module.package.root" value="com/l7tech/server/processcontroller"/>
+    <property name="module.sign" value="true"/>
 
     <import file="../../../etc/build/build-common.xml"/>
 </project>
