SSG-3146: Introduced two new cluster properties "samlAssertion.validate.notBeforeOffsetMin" and "samlAssertion.validate.notOnOrAfterOffsetMin" that can be used to widen the accepted validity interval for SAML assertion validation to allow for clock skew.  Both properties accept nonnegative integer values, and both default to zero.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25067 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -748,6 +748,14 @@ samlBeforeOffsetMinute.default = 2
 samlBeforeOffsetMinute.clusterProperty = samlAssertion.NotBeforeOffsetMinutes
 samlBeforeOffsetMinute.systemProperty = ${propertyPrefix}.saml.notbeforeoffsetmin
 
+samlValidateBeforeOffsetMinutes.description = The number of minutes to subtract from a SAML assertion's NotBefore restriction during validation.  This can be used to relax the validity window to allow for clock skew.  (default=0)
+samlValidateBeforeOffsetMinutes.default = 0
+samlValidateBeforeOffsetMinutes.clusterProperty = samlAssertion.validate.notBeforeOffsetMin
+
+samlValidateAfterOffsetMinutes.description = The number of minutes to add to a SAML assertion's NotOnOrAfter restriction during validation.  This can be used to relax the validity window to allow for clock skew.  (default=0) 
+samlValidateAfterOffsetMinutes.default = 0
+samlValidateAfterOffsetMinutes.clusterProperty = samlAssertion.validate.notOnOrAfterOffsetMin
+
 pkixValidation.identity.description = Default certificate validation setting for identity providers (validate/validatepath/revocation)
 pkixValidation.identity.default = validate
 pkixValidation.identity.clusterProperty = pkix.validation.identityProvider
