bug 8118: the solaris package now creates the processcontroller bin scripts with the correct permissions.
Also fixed: 
- processcontroller.sh no longer uses the linux specific "runuser" when launching.
- the /opt/SecureSpan/Controller/etc directory now has the correct permissions (775, layer7:gateway) in the ssg-b*.tar.gz output from the build.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25076 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -3173,6 +3173,16 @@
             </tarfileset>
             <tarfileset dir="${install.src.pc}" username="gateway" group="gateway" mode="644" prefix="${install.target.pc}">
                 <include name="**/*"/>
+                <exclude name="bin/*.sh"/>
+                <exclude name="etc"/>
+                <exclude name="etc/*"/>
+            </tarfileset>
+            <tarfileset dir="${install.src.pc}" username="gateway" group="gateway" filemode="555" dirmode="755" prefix="${install.target.pc}">
+                <include name="bin/*.sh"/>
+            </tarfileset>
+            <tarfileset dir="${install.src.pc}" username="layer7" group="gateway" filemode="555" dirmode="775" prefix="${install.target.pc}">
+                <include name="etc"/>
+                <include name="etc/*"/>
             </tarfileset>
         </tar>
 
