bug 7993: Fix ownership and permissions for PC's var/logs and var/patches for solaris / software builds.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25089 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -3176,6 +3176,10 @@
                 <exclude name="bin/*.sh"/>
                 <exclude name="etc"/>
                 <exclude name="etc/*"/>
+                <exclude name="var/logs"/>
+                <exclude name="var/logs/*"/>
+                <exclude name="var/patches"/>
+                <exclude name="var/patches/*"/>
             </tarfileset>
             <tarfileset dir="${install.src.pc}" username="gateway" group="gateway" filemode="555" dirmode="755" prefix="${install.target.pc}">
                 <include name="bin/*.sh"/>
@@ -3183,6 +3187,12 @@
             <tarfileset dir="${install.src.pc}" username="layer7" group="gateway" filemode="555" dirmode="775" prefix="${install.target.pc}">
                 <include name="etc"/>
                 <include name="etc/*"/>
+            </tarfileset>
+            <tarfileset dir="${install.src.pc}" username="layer7" group="gateway" filemode="664" dirmode="775" prefix="${install.target.pc}">
+                <include name="var/logs"/>
+                <include name="var/logs/*"/>
+                <include name="var/patches"/>
+                <include name="var/patches/*"/>
             </tarfileset>
         </tar>
 
