SSM-2483: Fixed a typo by changing "for" to "by" in the message, "The maximum number of records returned for the query:"
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25093 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/JDBCQueryAssertion/src/main/resources/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.properties
+++ b/modules/gateway/assertions/JDBCQueryAssertion/src/main/resources/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.properties
@@ -15,7 +15,7 @@ label.query.warning.message=WARNING: Use of non-select queries may destroy data 
 label.prefix=Prefix:
 label.fail.assertion=Fail assertion if there are no results returned by the query.
 label.query.name=Query Name (GUI use only, Optional):
-long.label.max.records=The maximum number of records returned for the query:
+long.label.max.records=The maximum number of records returned by the query:
 short.lable.max.records=Maximum Number Of Records
 
 column.label.column.label=Column Label
