g FR-169: Added a cluster property for configuring timestamp resolution.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25117 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1126,6 +1126,16 @@ wss.decorator.wsTrust200502TypeIndex.systemProperty = com.l7tech.common.security
 wss.decorator.wsTrust200502TypeIndex.getSystemProperty = false
 wss.decorator.wsTrust200502TypeIndex.setSystemProperty = true
 
+# Default property ensures system property overrides cluster property unless a cluster property is configured
+wss.decorator.timestamp.omitNanosDefault.default = false
+wss.decorator.timestamp.omitNanosDefault.systemProperty = com.l7tech.server.timestamp.omitNanos
+wss.decorator.timestamp.omitNanos.description = Should WS-Security timestamps created dates include nano seconds (true/false)
+wss.decorator.timestamp.omitNanos.default = ${wss.decorator.timestamp.omitNanosDefault}
+wss.decorator.timestamp.omitNanos.clusterProperty = wss.decorator.omitNanos
+wss.decorator.timestamp.omitNanos.systemProperty = com.l7tech.server.timestamp.omitNanos
+wss.decorator.timestamp.omitNanos.getSystemProperty = false
+wss.decorator.timestamp.omitNanos.setSystemProperty = true
+
 security.fips.enabled.description = Enable only FIPS-compliant cryptographic algorithms.  (true/false)
 security.fips.enabled.default=false
 security.fips.enabled.clusterProperty=security.fips.enabled
