SSG-3461: Add cluster property to control DNS name lookup for use in SAML tokens, by default we no longer include the DNS address.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25120 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -756,6 +756,12 @@ samlValidateAfterOffsetMinutes.description = The number of minutes to add to a S
 samlValidateAfterOffsetMinutes.default = 0
 samlValidateAfterOffsetMinutes.clusterProperty = samlAssertion.validate.notOnOrAfterOffsetMin
 
+samlGenerateIncludeDNSAddress.description = Should the subject locality for SAML authentication statements include a DNS address (true/false)
+samlGenerateIncludeDNSAddress.default = false
+samlGenerateIncludeDNSAddress.clusterProperty = saml.generation.includeDNSAddress
+samlGenerateIncludeDNSAddress.systemProperty = com.l7tech.security.saml.enableDNS
+samlGenerateIncludeDNSAddress.setSystemProperty = true
+
 pkixValidation.identity.description = Default certificate validation setting for identity providers (validate/validatepath/revocation)
 pkixValidation.identity.default = validate
 pkixValidation.identity.clusterProperty = pkix.validation.identityProvider
