SSG-3668: Remove option for publishing original business service metrics.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25136 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ServiceUDDISettingsDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ServiceUDDISettingsDialog.properties
@@ -3,7 +3,7 @@
 dialog.title=Publish to UDDI Settings
 
 metrics.label=Metrics
-metrics.enabled.label=&Publish Service Metrics
+metrics.enabled.label=&Publish Service Metrics for Published Business Services
 metrics.service.label=&Business Service to publish to
 service.label=Service
 policy.label=WS-Policy
