--- a/modules/ems/ivy.xml
+++ b/modules/ems/ivy.xml
@@ -59,6 +59,9 @@
         <dependency org="org.apache.cxf" name="cxf-rt-frontend-jaxws" rev="2.1.3" force="true" conf="core"/>
         <dependency org="org.apache.cxf" name="cxf-rt-transports-http" rev="2.1.3" force="true" conf="core"/>
 
+        <!-- For the ESM, we'll always use the FIPS version of RSA for the time being -->
+        <dependency org="com.rsa" name="jsafe-jce-fips" rev="4.0" force="true" conf="core"/>
+
         <exclude org="com.sun.xml.fastinfoset" module="FastInfoset" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
