--- a/build.xml
+++ b/build.xml
@@ -2727,6 +2727,7 @@
                 <include name="SSGBackup.zip" />
             </fileset>
         </move>
+        <copy file="etc/assets/SecureSpan_ActiveSOA.jar" tofile="${dist.dir}/SecureSpan_ActiveSOA-${build.version}.jar" verbose="true"/>
     </target>
 
     <target name="tar"
