--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1135,7 +1135,7 @@ wss.decorator.wsTrust200502TypeIndex.setSystemProperty = true
 # Default property ensures system property overrides cluster property unless a cluster property is configured
 wss.decorator.timestamp.omitNanosDefault.default = false
 wss.decorator.timestamp.omitNanosDefault.systemProperty = com.l7tech.server.timestamp.omitNanos
-wss.decorator.timestamp.omitNanos.description = Should WS-Security timestamps created dates include nano seconds (true/false)
+wss.decorator.timestamp.omitNanos.description = Should WS-Security timestamps created dates omit nanoseconds (true/false)
 wss.decorator.timestamp.omitNanos.default = ${wss.decorator.timestamp.omitNanosDefault}
 wss.decorator.timestamp.omitNanos.clusterProperty = wss.decorator.omitNanos
 wss.decorator.timestamp.omitNanos.systemProperty = com.l7tech.server.timestamp.omitNanos
