--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -53,5 +53,6 @@
         
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
+        <dependency name="MTOMAssertion" rev="latest.integration" conf="module-optional"/>
     </dependencies>
 </ivy-module>
