SSG-3717: For a consistency purpose, renamed two UDDI cluster properties without any functionality changed.  "uddi.activesoa.virtual.service.tmodelkey" is changed to "uddi.centrasite.activesoa.virtual.service.tmodelkey" and "uddi.centrasite.target" is changed to "uddi.centrasite.activesoa.target".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25291 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -652,8 +652,8 @@ uddi.result.batch_size.default = 100
 uddi.policyUrlTemplate.description = Template for building WS-Policy Attachment URL.
 uddi.policyUrlTemplate.clusterProperty = uddi.policyUrlTemplate
 uddi.policyUrlTemplate.default = http://{0}:{1}/ssg/policy/disco?serviceoid={3}&fulldoc={4}&inline={5}
-uddi.centrasite.target.description = The target to reference for CentraSite ActiveSOA UDDI Registry metrics.
-uddi.centrasite.target.clusterProperty = uddi.centrasite.target
+uddi.centrasite.activesoa.target.description = The target to reference for CentraSite ActiveSOA UDDI Registry metrics.
+uddi.centrasite.activesoa.target.clusterProperty = uddi.centrasite.activesoa.target
 uddi.connectTimeout.description = IO timeout for UDDI connection (Milliseconds)
 uddi.connectTimeout.clusterProperty = uddi.connectTimeout
 uddi.connectTimeout.default = 30000
@@ -665,9 +665,9 @@ uddi.wsdlpublish.maxretries.clusterProperty = uddi.wsdlpublish.maxretries
 uddi.wsdlpublish.maxretries.default = 3
 
 # Active SOA specific cluster properties
-uddi.activesoa.virtual.service.tmodelkey.description = tModelKey to add to proxied business services in ActiveSOA.
-uddi.activesoa.virtual.service.tmodelkey.clusterProperty = uddi.activesoa.virtual.service.tmodelkey
-uddi.activesoa.virtual.service.tmodelkey.default = uddi:9de0173b-5117-11de-8cf9-da0192ff3739
+uddi.centrasite.activesoa.virtual.service.tmodelkey.description = tModelKey to add to proxied business services in ActiveSOA.
+uddi.centrasite.activesoa.virtual.service.tmodelkey.clusterProperty = uddi.centrasite.activesoa.virtual.service.tmodelkey
+uddi.centrasite.activesoa.virtual.service.tmodelkey.default = uddi:9de0173b-5117-11de-8cf9-da0192ff3739
 
 # This setting is no longer used (should now be configured via manager log sink UI)
 trafficLoggerEnabled.description = Whether or not traffic should be recorded (true/false)
