--- a/modules/gateway/assertions/CaWsdmAssertion/ivy.xml
+++ b/modules/gateway/assertions/CaWsdmAssertion/ivy.xml
@@ -31,5 +31,7 @@
         <dependency org="com.netegrity" name="tmxmltoolkit" rev="6.0-281-0003" force="true" conf="core"/>
         <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
                     conf="compile->compile;runtime->runtime;test->test"/>
+
+        <override org="wsdl4j" module="wsdl4j" rev="1.6.2-l7p1"/>
     </dependencies>
 </ivy-module>
