--- a/modules/gateway/management/ivy.xml
+++ b/modules/gateway/management/ivy.xml
@@ -35,5 +35,6 @@
         <dependency org="org.springframework" name="spring-orm" rev="2.5.6" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-context-support" rev="2.5.6" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-tx" rev="2.5.6" force="true" conf="core"/>
+        <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
