--- a/modules/gateway/patchverifier/ivy.xml
+++ b/modules/gateway/patchverifier/ivy.xml
@@ -39,5 +39,7 @@
         <dependency org="commons-configuration" name="commons-configuration" rev="1.3" force="true" conf="core"/>
 
         <exclude org="com.l7tech"/>
+        <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
+        <exclude org="com.sun.xml.fastinfoset" module="FastInfoset" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
     </dependencies>
 </ivy-module>
