--- a/modules/internal/ivy.xml
+++ b/modules/internal/ivy.xml
@@ -25,5 +25,7 @@
 		<dependency name="layer7-gateway-console" rev="latest.integration" force="true" conf="core"/>
 		<dependency name="layer7-gateway-server" rev="latest.integration" force="true" conf="core"/>
 		<dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
+
+        <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
 	</dependencies>
 </ivy-module>
