--- a/modules/skunkworks/ivy.xml
+++ b/modules/skunkworks/ivy.xml
@@ -52,5 +52,6 @@
 
         <exclude org="asm" module="asm" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
     </dependencies>
 </ivy-module>
