SSM-2621: Corrected a typo for the title of the dialog of "Duplicate Property".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25379 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
@@ -2,7 +2,7 @@
 
 dialog.title.jdbc.conn.props=JDBC Connection Properties
 dialog.title.remove.additional.property=Remove Additional.Property
-dialog.title.duplicate.property=Duplicate Propeprty
+dialog.title.duplicate.property=Duplicate Property
 dialog.title.error.saving.conn=Error Saving JDBC Connection
 dialog.title.jdbc.conn.test=JDBC Connection Test
 
