--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
@@ -29,6 +29,7 @@ label.maxPoolSize=Maximum Pool Size:
 warning.basic.conn.prop.configured={0} has been configured in Basic Connection Configuration.
 warning.c3p0.pool.prop.configured={0} has been configured in C3P0 Pool Configuration.
 warning.minpoolsize.greaterthan.maxpoolsize=Minimum Pool Size must not be greater than Maximum Pool Size.
+warning.message.duplicated.property=Property, {0} already exists.  Try other property.
 
 column.label.property.name=Property Name
 column.label.property.value=Property Value
