Added a missed property "label.change=Change" into the SystemSettings properties file for the Enterprise Manager.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25398 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/SystemSettings.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/SystemSettings.properties
@@ -42,6 +42,7 @@ label.grants=Grants
 label.change.license=Change License
 label.new.license.file=New License File
 
+label.change=Change
 label.listener = HTTPS Listener
 label.listener.addr = IP Address
 label.listener.port = Port
