--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/web.xml
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/web.xml
@@ -298,6 +298,11 @@
     </servlet-mapping>
 
     <servlet-mapping>
+        <servlet-name>error</servlet-name>
+        <url-pattern>/ssg</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
         <servlet-name>SoapMessageProcessingServlet</servlet-name>
         <url-pattern>/ssg/servlet/soap</url-pattern>
     </servlet-mapping>
