--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -50,9 +50,9 @@
         <dependency name="JdbcQueryAssertion" rev="latest.integration" conf="module"/>
         <dependency name="XmlSecurityAssertion" rev="latest.integration" conf="module"/>
         <dependency name="UDDINotificationAssertion" rev="latest.integration" conf="module"/>
-        
+        <dependency name="MTOMAssertion" rev="latest.integration" conf="module"/>
+
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
-        <dependency name="MTOMAssertion" rev="latest.integration" conf="module-optional"/>
     </dependencies>
 </ivy-module>
