Formally integrate actional into trunk. ActionalAssertion is now part of the production build.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25426 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -51,6 +51,7 @@
         <dependency name="XmlSecurityAssertion" rev="latest.integration" conf="module"/>
         <dependency name="UDDINotificationAssertion" rev="latest.integration" conf="module"/>
         <dependency name="MTOMAssertion" rev="latest.integration" conf="module"/>
+        <dependency name="ActionalAssertion" rev="latest.integration" conf="module"/>
 
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
