bug 8339: Fixed ServerSamlIssuerAssertion to take into account the "not before" and "not after" assertion settings. Added cluster property for default value for "not after".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25451 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -748,6 +748,11 @@ samlBeforeOffsetMinute.default = 2
 samlBeforeOffsetMinute.clusterProperty = samlAssertion.NotBeforeOffsetMinutes
 samlBeforeOffsetMinute.systemProperty = ${propertyPrefix}.saml.notbeforeoffsetmin
 
+samlAfterOffsetMinute.description = The number of minutes (should be a positive integer) to offset the Not-On-Or-After aspect of the validity of SAML statements created by the token service
+samlAfterOffsetMinute.default = 5
+samlAfterOffsetMinute.clusterProperty = samlAssertion.NotAfterOffsetMinutes
+samlAfterOffsetMinute.systemProperty = ${propertyPrefix}.saml.notafteroffsetmin
+
 samlValidateBeforeOffsetMinutes.description = The number of minutes to subtract from a SAML assertion's NotBefore restriction during validation.  This can be used to relax the validity window to allow for clock skew.  (default=0)
 samlValidateBeforeOffsetMinutes.default = 0
 samlValidateBeforeOffsetMinutes.clusterProperty = samlAssertion.validate.notBeforeOffsetMin
