--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -52,6 +52,7 @@
         <dependency name="UDDINotificationAssertion" rev="latest.integration" conf="module"/>
         <dependency name="MTOMAssertion" rev="latest.integration" conf="module"/>
         <dependency name="ActionalAssertion" rev="latest.integration" conf="module"/>
+        <dependency name="ConcurrentAllAssertion" rev="latest.integration" conf="module"/>
 
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
