Added CacheAssertion to the core feature set. Added content-type override option for the lookup assertion. Implemented cache storage configuration. Implemented cache expiry.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25528 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -55,7 +55,8 @@
         <dependency name="ActionalAssertion" rev="latest.integration" conf="module"/>
         <dependency name="ConcurrentAllAssertion" rev="latest.integration" conf="module"/>
         <dependency name="GatewayManagementAssertion" rev="latest.integration" conf="module"/>
-
+        <dependency name="CacheAssertion" rev="latest.integration" conf="module"/>
+        
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
     </dependencies>
