--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/FederatedIdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/FederatedIdentityProviderDialog.properties
@@ -16,7 +16,7 @@ no.trusted.cert.warning.dialog.title=No Trusted Certificate(s) Selected!
 providerNameTextField.label=Provider Name:*
 providerNameTextField.mnemonic=I
 providerNameTextField.tooltip=Enter provider's name
-providerNameTextField.error.empty=Provider name must be between 3-24 chars in length.
+providerNameTextField.length.error=Provider name must be between 1 and 128 characters in length.
 providerNameTextField.error.title=Warning
 
 #buttons
