--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -25,7 +25,7 @@ whether LDAP users can be added to a role in the "Manage Roles" task.</p>\
 providerNameTextField.label=Provider Name:*
 providerNameTextField.mnemonic=I
 providerNameTextField.tooltip=Enter provider's name
-providerNameTextField.error.empty=Provider name must be between 3-24 chars in length.
+providerNameTextField.length.error=Provider name must be between 1 and 128 characters in length.
 providerNameTextField.error.title=Warning
 
 providerTypeTextField.label=Provider Type:
