Added dedicated stash manager for response caching, with separate storage directory and threshold. Implemented SSG response cache "clear all" using a cluster property for cache generation count. Fixed cache lookup assertion to store hits in a context variable, if so configured. SSG response cache defaults set to lower values.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25546 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -2966,6 +2966,7 @@
             <mkdir dir="@{dir}/${install.src.ssg.applet}"/>
             <mkdir dir="@{dir}/${install.src.ssg.appletlib}"/>
             <mkdir dir="@{dir}/${install.src.ssg.attachment}"/>
+            <mkdir dir="@{dir}/${install.src.ssg.responsecache}"/>
             <mkdir dir="@{dir}/${install.src.ssg.base}"/>
             <mkdir dir="@{dir}/${install.src.ssg.bin}"/>
             <mkdir dir="@{dir}/${install.src.ssg.conf}"/>
