--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -384,6 +384,12 @@ attachmentDirectory.default = ${ssg.var}${fs}attachments
 attachmentDirectory.jndi = ${jndiPrefix}/AttachmentDirectory
 attachmentDirectory.systemProperty = ${propertyPrefix}.attachmentDirectory
 
+# default = /ssg/var/responsecache
+responseCacheDirectory.description = Directory in which to cache large response messages from the backend
+responseCacheDirectory.default = ${ssg.var}${fs}responsecache
+responseCacheDirectory.jndi = ${jndiPrefix}/ResponseCacheDirectory
+responseCacheDirectory.systemProperty = ${propertyPrefix}.responseCacheDirectory
+
 # default = /ssg/modules/assertions
 modularAssertionsDirectory.description = Directory in which to find modular assertion jarfiles
 modularAssertionsDirectory.default = ${ssg.run}${fs}modules${fs}assertions
@@ -406,6 +412,18 @@ attachmentDiskThreshold.default = 1048576
 attachmentDiskThreshold.jndi = ${jndiPrefix}/AttachmentDiskThreshold
 attachmentDiskThreshold.systemProperty = ${propertyPrefix}.attachmentDiskThreshold
 attachmentDiskThreshold.clusterProperty = attachment.diskThreshold
+
+# default = 9096
+responseCacheDiskThreshold.description = Threshold for size of response messages to be cached on disk (Bytes)
+responseCacheDiskThreshold.default = 8096
+responseCacheDiskThreshold.jndi = ${jndiPrefix}/ResponseCacheDiskThreshold
+responseCacheDiskThreshold.systemProperty = ${propertyPrefix}.responseCacheDiskThreshold
+responseCacheDiskThreshold.clusterProperty = responseCache.diskThreshold
+
+responseCacheResetGeneration.description = Incrementing the generation number clears all response caches created under a different generation number.
+responseCacheResetGeneration.default = 0
+responseCacheResetGeneration.systemProperty = ${propertyPrefix}.responseCacheResetGeneration
+responseCacheResetGeneration.clusterProperty = responseCache.resetGeneration
 
 # Symantec AntiVirus ScanEngine (savseEnable = yes to enable scanning)
 savseEnable.description = Whether or not this gateway has access to a sav scan engine to do virus scanning
