Move SSM policy import/export to a separate module.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25548 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console-applet/build.xml
+++ b/modules/gateway/console-applet/build.xml
@@ -14,6 +14,7 @@
         <jar-include name="layer7-gateway-common"/>
         <jar-include name="layer7-kerberos"/>
         <jar-include name="layer7-policy"/>
+        <jar-include name="layer7-policy-exporter"/>
         <jar-include name="layer7-identity"/>
         <jar-include name="layer7-common"/>
         <jar-include name="layer7-gui"/>
