--- a/modules/gateway/console/ivy.xml
+++ b/modules/gateway/console/ivy.xml
@@ -27,6 +27,7 @@
         <dependency name="layer7-gui" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-wsdl" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-policy-exporter" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
         <dependency org="log4j" name="log4j" rev="1.2.15" force="true" conf="core"/>
         <dependency org="antlr" name="antlr" rev="2.7.7-l7p1" force="true" conf="core"/>
