Layer 7 Gateway Management API and service progress including the addition of policy import / export and full validation.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25553 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/GatewayManagementAssertion/ivy.xml
+++ b/modules/gateway/assertions/GatewayManagementAssertion/ivy.xml
@@ -21,6 +21,7 @@
 	<dependencies>
 
         <dependency name="layer7-gateway-api" rev="latest.integration" force="true" conf="core->master"/>
+        <dependency name="layer7-policy-exporter" rev="latest.integration" force="true" conf="core"/>
         <dependency org="javax.validation" name="validation-api" rev="1.0.0.GA" force="true" conf="core"/>
         <dependency org="org.hibernate" name="hibernate-validator" rev="4.0.2.GA" force="true" conf="core"/>
         <dependency name="wiseman" org="net.java.wiseman" rev="1.0" force="true" conf="core"/>
